[tool.poetry]
name = "brewblox-history"
version = "1.0.0"
description = "Connector service for Brewblox history data"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^3.3.2"
ciso8601 = "^2.2.0"
pytimeparse = "^1.1.8"
llist = "^0.7.1"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
flake8-quotes = "*"
aresponses = "*"
pytest = "*"
invoke = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
